--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <a href="https://discord.gg/AxA4uuMDfh">
       <img class="discord-logo" src="photo/discord-logo.png" alt="discord"> 
     </a>
+    <div class="tiktok-logo">
+      <a href="https://www.tiktok.com/@ze2ow">
+        <img class="instagram-logo" src="photo/tiktok-Logo-1-780x470.png" alt="instagram-logo2">
+      </a>
+    </div>
     <div class="instagram">
       <a href="https://www.instagram.com/invites/contact/?i=pd3i7zg8o5d4&utm_content=2lwxid4">
         <img class="instagram-logo" src="photo/instagram-logo2.jpg" alt="instagram-logo2">
