--- a/index.html
+++ b/index.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&family=Titan+One&display=swap" rel="stylesheet">
-  <title>Z E Z O</title>
-  <link rel="icon" href="photo/One-Piece-anime.png" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="color.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <title>Z E Z O</title>
 </head>
 <body>
-  <div class="discord">
-    <div class="rotate-circle">
-      <img class="profile" src="photo/profile.jpg" alt="profile">
+    <div id="container">
+        <div id="top-name">Z E Z O</div>
+        <div id="image-container">
+            <img src="https://preview.redd.it/whats-your-favourite-thing-about-giyu-tomioka-v0-m5burkjiysab1.jpg?auto=webp&s=b72e54720c815d8512661ea41a246cecdce531fb" alt="Your Image">
+            <div class="border"></div>
+        </div>
+        <div id="social-icons">
+            <a href="https://www.instagram.com/ze2ow/" class="icon" id="instagram"><img src="https://cdn-icons-png.flaticon.com/128/2111/2111463.png" alt="Instagram"></a>
+            <a href="https://www.tiktok.com/@czezo" class="icon" id="tiktok"><img src="https://cdn-icons-png.flaticon.com/128/3116/3116491.png" alt="TikTok"></a>
+            <a href="https://discord.gg/kqBEHNp2Rk" class="icon" id="discord"><img src="https://cdn-icons-png.flaticon.com/128/3670/3670157.png" alt="Discord"></a>
+            <a href="https://www.snapchat.com/add/zezo.true" class="icon" id="snapchat"><img src="https://cdn-icons-png.flaticon.com/512/3670/3670166.png" alt="Snapchat"></a>
+        </div>
+        <div id="bottom-text">Welcome to mi Familia</div>
     </div>
-    <a href="https://discord.gg/AxA4uuMDfh">
-      <img class="discord-logo" src="photo/discord-logo.png" alt="discord"> 
-    </a>
-    <div class="tiktok-logo">
-      <a href="https://www.tiktok.com/@ze2ow">
-        <img class="instagram-logo" src="photo/tiktok-Logo-1-780x470.png" alt="instagram-logo2">
-      </a>
-    </div>
-    <div class="instagram">
-      <a href="https://www.instagram.com/invites/contact/?i=pd3i7zg8o5d4&utm_content=2lwxid4">
-        <img class="instagram-logo" src="photo/instagram-logo2.jpg" alt="instagram-logo2">
-      </a>
-      <p style="margin-left: px;">Detna Hawa MN kaef Xosh Dkat Galk Sopas</p>
-    </div>
-  </div>
 </body>
 </html>
