--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="color.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <title>Z E Z O</title>
@@ -21,6 +21,7 @@
             <a href="https://www.tiktok.com/@czezo" class="icon" id="tiktok"><img src="https://cdn-icons-png.flaticon.com/128/3116/3116491.png" alt="TikTok"></a>
             <a href="https://discord.gg/kqBEHNp2Rk" class="icon" id="discord"><img src="https://cdn-icons-png.flaticon.com/128/3670/3670157.png" alt="Discord"></a>
             <a href="https://www.snapchat.com/add/zezo.true" class="icon" id="snapchat"><img src="https://cdn-icons-png.flaticon.com/512/3670/3670166.png" alt="Snapchat"></a>
+            <a href="https://t.me/nzezo" class="icon" id="telegram"><img src="https://cdn-icons-png.flaticon.com/128/2111/2111646.png" alt="Telegram"></a>
         </div>
         <div id="bottom-text">Welcome to mi Familia</div>
     </div>
