--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="social-icons">
             <a href="https://www.instagram.com/ze2ow/" class="icon" id="instagram"><img src="https://cdn-icons-png.flaticon.com/128/2111/2111463.png" alt="Instagram"></a>
             <a href="https://www.tiktok.com/@czezo" class="icon" id="tiktok"><img src="https://cdn-icons-png.flaticon.com/128/3116/3116491.png" alt="TikTok"></a>
-            <a href="https://discord.gg/nzezo" class="icon" id="discord"><img src="https://cdn-icons-png.flaticon.com/128/3670/3670157.png" alt="Discord"></a>
+            <a href="https://discord.gg/JfGhPfDFA7" class="icon" id="discord"><img src="https://cdn-icons-png.flaticon.com/128/3670/3670157.png" alt="Discord"></a>
             <a href="https://www.snapchat.com/add/zezo.true" class="icon" id="snapchat"><img src="https://cdn-icons-png.flaticon.com/512/3670/3670166.png" alt="Snapchat"></a>
             <a href="https://t.me/nzezo" class="icon" id="telegram"><img src="https://cdn-icons-png.flaticon.com/128/2111/2111646.png" alt="Telegram"></a>
         </div>
