--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </header>
 
     <section class="main">
-        <img src="Comp 1.gif" data-full="Comp 1.gif" alt="" class="lazyload fade-in">
+        <img src="https://drive.google.com/file/d/1icGYRRC_FkzpQOSZ-DkIolzTdA_1Om68/view?usp=sharing" data-full="https://drive.google.com/file/d/1icGYRRC_FkzpQOSZ-DkIolzTdA_1Om68/view?usp=sharing" alt="" class="lazyload fade-in">
         <span>Z E Z O</span>
         <p>not smart, not stupid either, im just lustless.</p>
         <br>
