--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </header>
 
     <section class="main">
-        <img src="https://drive.google.com/file/d/1icGYRRC_FkzpQOSZ-DkIolzTdA_1Om68/view?usp=sharing" data-full="https://drive.google.com/file/d/1icGYRRC_FkzpQOSZ-DkIolzTdA_1Om68/view?usp=sharing" alt="" class="lazyload fade-in">
+        <img src="https://previews.dropbox.com/p/thumb/ACcSu155kg0zOAclR1uyPioCtEuitwBYLikmt0MQIOXetZ0GuOIwB_d5ajglYZRGDN3YAoze_yseIRBiellh-xIYFbi-uPn_IUx9EaxoO8r8mugOF5Bxfi2yRp99Ij3pHVsgFqmQbKaXqUQJ-f2DLw_mlxnfpkE46xT1PI4LZnwtddvNnos98ve7-F9Y3HiUHF5RNz6yEnROQ_ex1egbnrsatIXGJioJlrlymJLLMhll34j_uJmATOUgPCrGOyiV6HMvAzLmNjA6butmyZnmE4GnEcqHyA3AYB-LsTpfklIpzGqkNia0oiMpFtAV6xB_nh4/p.gif" data-full="https://previews.dropbox.com/p/thumb/ACcSu155kg0zOAclR1uyPioCtEuitwBYLikmt0MQIOXetZ0GuOIwB_d5ajglYZRGDN3YAoze_yseIRBiellh-xIYFbi-uPn_IUx9EaxoO8r8mugOF5Bxfi2yRp99Ij3pHVsgFqmQbKaXqUQJ-f2DLw_mlxnfpkE46xT1PI4LZnwtddvNnos98ve7-F9Y3HiUHF5RNz6yEnROQ_ex1egbnrsatIXGJioJlrlymJLLMhll34j_uJmATOUgPCrGOyiV6HMvAzLmNjA6butmyZnmE4GnEcqHyA3AYB-LsTpfklIpzGqkNia0oiMpFtAV6xB_nh4/p.gif" alt="" class="lazyload fade-in">
         <span>Z E Z O</span>
         <p>not smart, not stupid either, im just lustless.</p>
         <br>
