--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </header>
 
     <section class="main">
-        <img src="https://previews.dropbox.com/p/thumb/ACcSu155kg0zOAclR1uyPioCtEuitwBYLikmt0MQIOXetZ0GuOIwB_d5ajglYZRGDN3YAoze_yseIRBiellh-xIYFbi-uPn_IUx9EaxoO8r8mugOF5Bxfi2yRp99Ij3pHVsgFqmQbKaXqUQJ-f2DLw_mlxnfpkE46xT1PI4LZnwtddvNnos98ve7-F9Y3HiUHF5RNz6yEnROQ_ex1egbnrsatIXGJioJlrlymJLLMhll34j_uJmATOUgPCrGOyiV6HMvAzLmNjA6butmyZnmE4GnEcqHyA3AYB-LsTpfklIpzGqkNia0oiMpFtAV6xB_nh4/p.gif" data-full="https://previews.dropbox.com/p/thumb/ACcSu155kg0zOAclR1uyPioCtEuitwBYLikmt0MQIOXetZ0GuOIwB_d5ajglYZRGDN3YAoze_yseIRBiellh-xIYFbi-uPn_IUx9EaxoO8r8mugOF5Bxfi2yRp99Ij3pHVsgFqmQbKaXqUQJ-f2DLw_mlxnfpkE46xT1PI4LZnwtddvNnos98ve7-F9Y3HiUHF5RNz6yEnROQ_ex1egbnrsatIXGJioJlrlymJLLMhll34j_uJmATOUgPCrGOyiV6HMvAzLmNjA6butmyZnmE4GnEcqHyA3AYB-LsTpfklIpzGqkNia0oiMpFtAV6xB_nh4/p.gif" alt="" class="lazyload fade-in">
+        <img src="https://pouch.jumpshare.com/preview/iI5B5HgNc7xmeXvgzm2ERw0G1KRVLGAPnu2LbxOyKFiTNnoCjzGNLt89TntkL8T6_sUKSoZTBKnUn7HpYDX0TU00fi-sjl6R2y2e3t7LEoA" data-full="https://pouch.jumpshare.com/preview/iI5B5HgNc7xmeXvgzm2ERw0G1KRVLGAPnu2LbxOyKFiTNnoCjzGNLt89TntkL8T6_sUKSoZTBKnUn7HpYDX0TU00fi-sjl6R2y2e3t7LEoA">
         <span>Z E Z O</span>
         <p>not smart, not stupid either, im just lustless.</p>
         <br>
