--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </header>
 
     <section class="main">
-        <img src="https://pouch.jumpshare.com/preview/iI5B5HgNc7xmeXvgzm2ERw0G1KRVLGAPnu2LbxOyKFiTNnoCjzGNLt89TntkL8T6_sUKSoZTBKnUn7HpYDX0TU00fi-sjl6R2y2e3t7LEoA" data-full="https://pouch.jumpshare.com/preview/iI5B5HgNc7xmeXvgzm2ERw0G1KRVLGAPnu2LbxOyKFiTNnoCjzGNLt89TntkL8T6_sUKSoZTBKnUn7HpYDX0TU00fi-sjl6R2y2e3t7LEoA">
+        <img src="Comp 1_3.gif" data-full="Comp 1_3.gif">
         <span>Z E Z O</span>
         <p>not smart, not stupid either, im just lustless.</p>
         <br>
