--- a/index.html
+++ b/index.html
@@ -273,35 +273,39 @@
     }
 
     .whitelist-form {
-      margin: 28px auto 0 auto;
-      background: repeating-linear-gradient(
-        135deg,
-        #3a2e19 0 10px,
-        #4e3f23 10px 20px
-      );
-      border: 3px solid #6b4f1d;
-      border-radius: 10px;
-      padding: 14px 10px 12px 10px;
+      margin: 26px auto 0 auto;
+      background: linear-gradient(135deg, rgba(168,85,247,0.13) 0%, rgba(147,51,234,0.13) 100%);
+      border-radius: 18px;
+      padding: 16px 14px 12px 14px;
       max-width: 260px;
       width: 100%;
-      box-shadow: 0 0 10px 0 rgba(60, 40, 10, 0.18);
+      box-shadow: 0 0 18px 0 rgba(168,85,247,0.10), 0 4px 18px 0 rgba(0,0,0,0.13);
+      border: 2px solid rgba(168,85,247,0.18);
       display: flex;
       flex-direction: column;
       align-items: center;
       z-index: 1;
       position: relative;
       font-family: 'Minecraftia', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      animation: mcPopIn 0.7s cubic-bezier(.77,0,.18,1);
+      animation: profileFadeIn 1s cubic-bezier(.77,0,.18,1);
+      transition: box-shadow 0.4s, border 0.4s, background 0.4s;
+    }
+
+    .whitelist-form:hover {
+      box-shadow: 0 0 28px 0 #a855f7, 0 4px 28px 0 #9333ea;
+      border: 2.5px solid #a855f7;
+      background: linear-gradient(120deg, rgba(168,85,247,0.22) 0%, rgba(147,51,234,0.22) 100%);
     }
 
     .whitelist-form h2 {
       font-size: 1em;
       margin-bottom: 8px;
-      color: #ffe066;
+      color: #c084fc;
       letter-spacing: 1px;
-      text-shadow: 1px 1px 0 #6b4f1d;
+      text-shadow: 0 0 6px #a855f7;
       font-family: 'Minecraftia', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
+
     #mc-whitelist-form {
       display: flex;
       gap: 5px;
@@ -311,44 +315,44 @@
     #mc-name {
       flex: 1;
       padding: 4px 7px;
-      border-radius: 4px;
-      border: 2px solid #6b4f1d;
+      border-radius: 6px;
+      border: 2px solid #a855f7;
       outline: none;
       font-size: 0.95em;
-      background: #bfa76a;
-      color: #2d2210;
+      background: #f3e8ff;
+      color: #6b21a8;
       font-family: 'Minecraftia', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      box-shadow: 1px 1px 0 #fffbe6 inset;
+      box-shadow: 1px 1px 0 #e9d5ff inset;
       transition: border 0.2s;
     }
     #mc-name:focus {
-      border: 2px solid #ffe066;
+      border: 2px solid #c084fc;
     }
 
     #mc-whitelist-form button {
       padding: 4px 10px;
-      border-radius: 4px;
-      border: 2px solid #6b4f1d;
-      background: linear-gradient(90deg, #ffe066 60%, #bfa76a 100%);
-      color: #4e3f23;
+      border-radius: 6px;
+      border: 2px solid #a855f7;
+      background: linear-gradient(90deg, #a855f7 60%, #c084fc 100%);
+      color: #fff;
       font-weight: bold;
       font-size: 0.95em;
       cursor: pointer;
       font-family: 'Minecraftia', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      box-shadow: 1px 1px 0 #fffbe6 inset;
+      box-shadow: 1px 1px 0 #e9d5ff inset;
       transition: background 0.2s, border 0.2s;
     }
     #mc-whitelist-form button:hover {
-      background: linear-gradient(90deg, #bfa76a 60%, #ffe066 100%);
-      border: 2px solid #ffe066;
+      background: linear-gradient(90deg, #c084fc 60%, #a855f7 100%);
+      border: 2px solid #c084fc;
     }
 
     #whitelist-message {
       margin-top: 7px;
       font-size: 0.92em;
-      color: #ffe066;
+      color: #c084fc;
       min-height: 16px;
-      text-shadow: 1px 1px 0 #6b4f1d;
+      text-shadow: 0 0 6px #a855f7;
       font-family: 'Minecraftia', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
@@ -398,17 +402,15 @@
       <a href="#"><i class="fab fa-discord"></i></a>
       <a href="#"><i class="fab fa-tiktok"></i></a>
     </div>
-  </div>
-
-  <!-- Place this just below your .profile div -->
-  <div class="whitelist-form">
-    <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/5/5e/Grass_Block_JE6_BE3.png" alt="Minecraft Grass Block" style="width:28px;height:28px;vertical-align:middle;margin-bottom:2px;">
-    <h2>Request Minecraft Whitelist</h2>
-    <form id="mc-whitelist-form">
-      <input type="text" id="mc-name" placeholder="Enter your Minecraft name" required maxlength="16" />
-      <button type="submit">Send</button>
-    </form>
-    <div id="whitelist-message"></div>
+    <!-- Move whitelist form INSIDE profile, at the bottom -->
+    <div class="whitelist-form">
+      <h2>Minecraft Whitelist</h2>
+      <form id="mc-whitelist-form">
+        <input type="text" id="mc-name" placeholder="نافئ خويئ ماينكرافتئ" required maxlength="16" />
+        <button type="submit">Send</button>
+      </form>
+      <div id="whitelist-message"></div>
+    </div>
   </div>
 
   <script>
